# hakyll-dir-list

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hakyll-dir-list.cabal  stack.yaml
example/: README.md  single-page.cabal  single-page.hs  stack.yaml
example/pages/: four.md  one.md  two.md
example/pages/two/: a.md
example/templates/: default.html  index.html
src/Hakyll/Web/Template/: DirList.hs  HierarchicalList.hs
