name:               hakyll-dir-list
version:            0.1.1.0
build-type:         Simple
cabal-version:      >= 1.10

library
  exposed-modules:
    Hakyll.Web.Template.DirList
  build-depends:    base == 4.*
                  , hakyll == 4.11.*
                  , filepath
                  , containers
  hs-source-dirs: src
  Ghc-options:    -Wall
  default-language: Haskell2010


