name:               single-page
version:            1.0.0.3
build-type:         Simple
cabal-version:      >= 1.10

executable single-page
  main-is:          single-page.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hakyll-dir-list
  ghc-options:      -threaded -Wall
  default-language: Haskell2010


